WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
60487
[Qt] DRT eventSender.addTouchPoint method is not setting the start position
https://bugs.webkit.org/show_bug.cgi?id=60487
Summary
[Qt] DRT eventSender.addTouchPoint method is not setting the start position
Igor Trindade Oliveira
Reported
2011-05-09 11:40:46 PDT
when adding a new touch point(eventSender.addTouchPoint(x,y)). The startPos is not being set. it is necessary to create tests for bug:
https://bugs.webkit.org/show_bug.cgi?id=32484
Attachments
patch
(1.57 KB, patch)
2011-05-09 11:44 PDT
,
Igor Trindade Oliveira
kling
: review-
Details
Formatted Diff
Diff
patch
(2.13 KB, patch)
2011-05-09 12:57 PDT
,
Igor Trindade Oliveira
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Igor Trindade Oliveira
Comment 1
2011-05-09 11:44:23 PDT
Created
attachment 92814
[details]
patch Proposed Patch
Andreas Kling
Comment 2
2011-05-09 12:36:31 PDT
Comment on
attachment 92814
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=92814&action=review
Nice catch. r- because the code is ugly. Not your fault, but let's fix it. :)
> Tools/DumpRenderTree/qt/EventSenderQt.cpp:406 > QTouchEvent::TouchPoint point(id); > m_touchPoints.append(point); > updateTouchPoint(index, x, y); > + m_touchPoints[index].setStartPos(QPointF(x, y)); > m_touchPoints[index].setState(Qt::TouchPointPressed);
This code is unnecessarily confusing, we should fix it while we're visiting. Something like: QTouchEvent::TouchPoint point(id); point.setPos(QPointF(x, y)); point.setStartPos(QPointF(x, y)); point.setState(Qt::TouchPointPressed); m_touchPoints.append(point); And of course the 'index' variable won't be needed after this cleanup.
Igor Trindade Oliveira
Comment 3
2011-05-09 12:57:44 PDT
Created
attachment 92835
[details]
patch proposed patch.
Andreas Kling
Comment 4
2011-05-09 13:23:25 PDT
Comment on
attachment 92835
[details]
patch r=me
WebKit Commit Bot
Comment 5
2011-05-09 14:56:24 PDT
Comment on
attachment 92835
[details]
patch Clearing flags on attachment: 92835 Committed
r86090
: <
http://trac.webkit.org/changeset/86090
>
WebKit Commit Bot
Comment 6
2011-05-09 14:56:27 PDT
All reviewed patches have been landed. Closing bug.
Ademar Reis
Comment 7
2011-05-16 14:04:30 PDT
Revision
r86090
cherry-picked into qtwebkit-2.2 with commit 1064adb <
http://gitorious.org/webkit/qtwebkit/commit/1064adb
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug