2011-05-09  Igor Oliveira  <igor.oliveira@openbossa.org>

Reviewed by Andreas Kling.

        [Qt] DRT eventSender.addTouchPoint method is not setting the start position
        https://bugs.webkit.org/show_bug.cgi?id=60487

        When adding a new touch point, the start position of this point needs to be set.

        * DumpRenderTree/qt/EventSenderQt.cpp:
        (EventSender::addTouchPoint):

Canonical link: https://commits.webkit.org/75763@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@86090 268f45cc-cd09-0410-ab3c-d52691b4dbfc